# LukeBot

./: .dockerignore  .gitignore  Dockerfile  LukeBot_Request.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml  deploy.yml  release.yml
luke_bot/: __init__.py  __main__.py  discord_bot.py  graphql.py  log.py  main.py  settings.py  smashgg_query.py  startgg_query.py
tests/: __init__.py  conftest.py  test_data.py  test_discord_bot.py  tester_bot.py
